--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@playwright/test": "^1.28.1",
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -34,8 +33,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@playwright/test": "^1.42.1",
+    "@tanstack/svelte-table": "^8.12.0",
     "@vercel/analytics": "^1.2.2",
     "moment": "^2.30.1",
-    "playwright": "^1.41.2"
+    "playwright": "^1.42.1"
   }
 }
