--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@playwright/test": "^1.42.1",
     "@tanstack/svelte-table": "^8.12.0",
     "@vercel/analytics": "^1.2.2",
-    "moment": "^2.30.1",
+    "date-fns": "^3.6.0",
     "playwright": "^1.42.1"
   }
 }
