--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tanstack/svelte-table": "^8.12.0",
     "@vercel/analytics": "^1.2.2",
     "date-fns": "^3.6.0",
+    "moment": "^2.30.1",
     "playwright": "^1.42.1"
   }
 }
