--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.35.1",
+    "playwright": "^1.43.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
     "svelte": "^4.2.7",
@@ -38,7 +39,6 @@
     "@tanstack/svelte-table": "^8.12.0",
     "@vercel/analytics": "^1.2.2",
     "date-fns": "^3.6.0",
-    "moment": "^2.30.1",
-    "playwright": "^1.42.1"
+    "moment": "^2.30.1"
   }
 }
