--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "playwright": "^1.43.0",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^4.2.7",
+    "svelte": "^5.0.0-next.100",
     "svelte-check": "^3.6.0",
     "typescript": "^5.0.0",
     "vite": "^5.0.3",
