- resolve svelte warnings in dev mode with clicking controls (avoid direct manipulation through biding) - date fields and student table checkboxes still causes warnings

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ node_modules
 /build
 /.svelte-kit
 /package
-/static/sig.png
 .env
 .env.*
 !.env.example
@@ -14,3 +13,5 @@ vite.config.ts.timestamp-*
 test-results/*
 .history/*
 .vercel
+/static/sig.png
+bun.lockb
