--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
   "dependencies": {
     "@playwright/test": "^1.42.1",
     "@vercel/analytics": "^1.2.2",
-    "date-fns": "^3.6.0",
-    "moment": "^2.30.1"
+    "date-fns": "^3.6.0"
   }
 }
