--- a/package.json
+++ b/package.json
@@ -16,28 +16,28 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/adapter-vercel": "^5.2.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@sveltejs/adapter-auto": "^3.2.4",
+    "@sveltejs/adapter-vercel": "^5.4.3",
+    "@sveltejs/kit": "^2.5.24",
+    "@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
     "@types/eslint": "8.56.0",
-    "@types/node": "^20.12.8",
-    "eslint": "^8.56.0",
+    "@types/node": "^20.16.1",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "playwright": "^1.43.0",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "svelte": "^5.0.0-next.100",
-    "svelte-check": "^3.6.0",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
-    "vitest": "^1.2.0"
+    "eslint-plugin-svelte": "^2.43.0",
+    "playwright": "^1.46.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte": "5.0.0-next.233",
+    "svelte-check": "^3.8.5",
+    "typescript": "^5.5.4",
+    "vite": "^5.4.2",
+    "vitest": "^1.6.0"
   },
   "type": "module",
   "dependencies": {
-    "@playwright/test": "^1.42.1",
-    "@vercel/analytics": "^1.2.2",
+    "@playwright/test": "^1.46.1",
+    "@vercel/analytics": "^1.3.1",
     "date-fns": "^3.6.0"
   }
 }
