--- a/package.json
+++ b/package.json
@@ -16,37 +16,40 @@
     "test:e2e": "playwright test"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@sveltejs/adapter-auto": "^3.3.1",
+    "@eslint-community/eslint-utils": "^4.4.1",
+    "@eslint/js": "^9.18.0",
+    "@sveltejs/adapter-auto": "^4.0.0",
     "@sveltejs/adapter-vercel": "^5.5.2",
-    "@sveltejs/kit": "^2.15.2",
-    "@sveltejs/vite-plugin-svelte": "4.0.0-next.6",
-    "@types/eslint": "8.56.0",
-    "@types/node": "^20.17.12",
+    "@sveltejs/kit": "^2.15.3",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@types/eslint": "^9.6.1",
+    "@types/node": "^22.10.7",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8.57.1",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.1",
     "globals": "^15.14.0",
     "playwright": "^1.49.1",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
-    "prettier-plugin-svelte": "^3.3.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "svelte": "^5.17.0",
-    "svelte-check": "^3.8.6",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.10",
+    "svelte": "^5.18.0",
+    "svelte-check": "^4.1.4",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5.7.2",
-    "typescript-eslint": "^8.19.1",
-    "vite": "^5.4.11",
-    "vitest": "^1.6.0"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "vite": "^6.0.7",
+    "vitest": "^3.0.1"
   },
   "type": "module",
   "dependencies": {
     "@jitpackjoyride/lucia-adapter-edgedb": "^0.3.0",
     "@playwright/test": "^1.49.1",
     "@vercel/analytics": "^1.4.1",
-    "date-fns": "^3.6.0",
+    "@vercel/nft": "^0.29.0",
+    "date-fns": "^4.1.0",
+    "svelte-preprocess": "^6.0.3",
     "tippy.js": "^6.3.7"
   }
 }
