--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@sveltejs/adapter-vercel": "^5.5.3",
     "@sveltejs/kit": "^2.16.1",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@tailwindcss/postcss": "^4.0.0",
     "@types/eslint": "^9.6.1",
     "@types/node": "^22.12.0",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-svelte": "^2.46.1",
@@ -34,9 +34,9 @@
     "prettier": "^3.4.2",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "svelte": "^5.19.3",
+    "svelte": "^5.19.4",
     "svelte-check": "^4.1.4",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.0.0",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.0.11",
@@ -46,6 +46,7 @@
   "dependencies": {
     "@jitpackjoyride/lucia-adapter-edgedb": "^0.3.0",
     "@playwright/test": "^1.50.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@vercel/analytics": "^1.4.1",
     "@vercel/nft": "^0.29.1",
     "date-fns": "^4.1.0",
