--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@eslint-community/eslint-utils": "^4.7.0",
     "@eslint/js": "^9.32.0",
+    "@playwright/test": "^1.54.2",
     "@sveltejs/adapter-auto": "^6.0.1",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.0",
@@ -39,18 +40,15 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.0.6",
-    "vitest": "^3.2.4"
+    "vite": "^7.0.6"
   },
   "type": "module",
   "dependencies": {
     "@jitpackjoyride/lucia-adapter-edgedb": "^0.3.0",
-    "@playwright/test": "^1.54.2",
     "@tailwindcss/vite": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
     "@vercel/nft": "^0.30.0",
     "date-fns": "^4.1.0",
-    "svelte-preprocess": "^6.0.3",
-    "tippy.js": "^6.3.7"
+    "svelte-preprocess": "^6.0.3"
   }
 }
