--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "test": "vitest",
     "test:integration": "playwright test",
     "test:unit": "vitest",
-    "test:e2e": "playwright test"
-  },
+    "test:e2e": "playwright test" 
+   },
   "devDependencies": {
     "@eslint-community/eslint-utils": "^4.7.0",
     "@eslint/js": "^9.32.0",
@@ -40,7 +40,8 @@
     "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
-    "vite": "^7.0.6"
+    "vite": "^7.0.6",
+    "vitest": "^3.2.4"
   },
   "type": "module",
   "dependencies": {
