package clean up
package clean up

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
@@ -13,17 +14,17 @@
     "test": "vitest",
     "test:integration": "playwright test",
     "test:unit": "vitest",
-    "test:e2e": "playwright test" 
-   },
+    "test:e2e": "playwright test"
+  },
   "devDependencies": {
     "@eslint-community/eslint-utils": "^4.7.0",
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.54.2",
-    "@sveltejs/adapter-auto": "^6.0.1",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/eslint": "^9.6.1",
     "@types/node": "^24.2.0",
     "eslint": "^9.32.0",
@@ -46,10 +47,7 @@
   "type": "module",
   "dependencies": {
     "@jitpackjoyride/lucia-adapter-edgedb": "^0.3.0",
-    "@tailwindcss/vite": "^4.1.11",
     "@vercel/analytics": "^1.5.0",
-    "@vercel/nft": "^0.30.0",
-    "date-fns": "^4.1.0",
-    "svelte-preprocess": "^6.0.3"
+    "date-fns": "^4.1.0"
   }
 }
