--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@eslint-community/eslint-utils": "^4.7.0",
     "@eslint/js": "^9.32.0",
     "@playwright/test": "^1.54.2",
+    "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.0",
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
     "@tailwindcss/postcss": "^4.1.11",
+    "@tailwindcss/vite": "^4.1.11",
     "@types/eslint": "^9.6.1",
     "@types/node": "^24.2.0",
     "eslint": "^9.32.0",
@@ -35,6 +37,7 @@
     "prettier-plugin-tailwindcss": "^0.6.14",
     "svelte": "^5.37.3",
     "svelte-check": "^4.3.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.0",
     "vite": "^7.0.6",
@@ -43,6 +46,7 @@
   "type": "module",
   "dependencies": {
     "date-fns": "^4.1.0",
+
     "@vercel/analytics": "^1.5.0"
 
   }
