--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "test:integration": "playwright test",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
-    "test-and-push": "echo 'Running tests...' && vitest --run && playwright test --browser=chromium && playwright test --browser=webkit && echo 'Pushing to git...' && git push origin master"    
+    "test-and-push": "echo 'Running tests...' && vitest --run && playwright test --browser=chromium && playwright test --browser=webkit && echo 'Pushing to git...' && git push origin master"
   },
   "devDependencies": {
     "@eslint-community/eslint-utils": "^4.7.0",
     "@eslint/js": "^9.32.0",
+    "@modelcontextprotocol/server-filesystem": "^2025.7.29",
     "@playwright/test": "^1.54.2",
     "@sveltejs/adapter-vercel": "^5.8.1",
     "@sveltejs/kit": "^2.27.0",
