add cli shortcuts for tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"test": "vitest",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
-		"test:e2e": "playwright test",
+		"test:e2e": "playwright test && playwright test --browser=webkit",
+		"test:ui": "playwright test --ui",
 		"test-and-push": "echo 'Running tests...' && vitest --run && playwright test --browser=chromium && playwright test --browser=webkit && echo 'Pushing to git...' && git push origin master"
 	},
 	"devDependencies": {
