- update settings to not check for TypeScript in test *.js files.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,7 @@
 		// "module": "esnext",
 		// "lib": ["esnext", "dom"],
 	},
-	"exclude": ["**/*.js"]
+	"exclude": ["src/tests/**", "src/lib/**/__tests__/**"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	// except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
 	//
