--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "my-app",
 	"version": "0.0.1",
 	"private": true,
-	"packageManager": "pnpm@9.4.0",
+	"packageManager": "bun@1.3.3",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -52,5 +52,8 @@
 	"dependencies": {
 		"@sveltejs/vite-plugin-svelte-inspector": "^5.0.1",
 		"date-fns": "^4.1.0"
+	},
+	"optionalDependencies": {
+		"@rollup/rollup-darwin-arm64": "^4.53.3"
 	}
 }
