Refactor UI components and fix school year calculation - Standardized button styles using new CSS utility classes (.btn, .btn-primary, .btn-secondary) - Added focus states and improved accessibility across components - Fixed school year semester calculation to include January in Semester 2 (Still semester 1, but too late to be using the scheduling tool) - Updated test scripts to run both chromium and webkit browsers - Enhanced navigation styling with gradient background and hover effects - Added new school events data file for 2025-2026 semester 2

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"test": "vitest",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
-		"test:e2e": "playwright test && playwright test --browser=webkit",
+		"test:e2e": "playwright test --browser=chromium --browser=webkit",
 		"test:ui": "playwright test --ui",
-		"test-and-push": "echo 'Tailscale connect…' && tailscale up --exit-node=100.86.31.118 --accept-routes --exit-node-allow-lan-access && echo 'Running tests...' && vitest --run && playwright test --browser=chromium && playwright test --browser=webkit && echo 'Pushing to git...' && git push origin master && echo 'Resetting Tailscale configuration...' && tailscale up --reset && echo 'Tailscale connected without exit node.' && tailscale up"
+		"test-and-push": "echo 'Tailscale connect…' && tailscale up --exit-node=100.86.31.118 --accept-routes --exit-node-allow-lan-access && echo 'Running tests...' && vitest --run && playwright test --browser=chromium --browser=webkit && echo 'Pushing to git...' && git push origin master && echo 'Resetting Tailscale configuration...' && tailscale up --reset && echo 'Tailscale connected without exit node.' && tailscale up"
 	},
 	"devDependencies": {
 		"@eslint-community/eslint-utils": "^4.9.0",
